# FlowAgent

./: .env.example  .gitignore  README.md  pyproject.toml
dataset/: .gitignore
dataset/meta/: oow.yaml
dataset/sample/: task_infos.json
dataset/sample/code/: 000.py
dataset/sample/flowchart/: 000.md
dataset/sample/pdl/: 000.yaml
dataset/sample/text/: 000.txt
dataset/sample/tools/: 000.yaml
dataset/sample/user_profile/: 000.json
scripts/: run_baseline_cli.sh  run_baseline_exp.sh  run_cli.sh  run_exp.sh  run_frontend.sh
src/: run_flowagent_cli.py  run_flowagent_datacheck.py  run_flowagent_eval.py  run_flowagent_exp.py  run_flowagent_ui.py
src/easonsi/llm/: openai_client.py
src/flowagent/: __init__.py
src/flowagent/configs/: default.yaml
src/flowagent/controller/: __init__.py  base.py  flowagent.py  pdl_checker.py  pdl_utils.py
src/flowagent/data/: __init__.py  base_data.py  base_llm.py  config.py  db.py  log.py  pdl.py  role_outputs.py  user_profile.py  workflow.py
src/flowagent/eval/: __init__.py  analyzer.py  eval_utils.py  evaluator.py  judger.py  metric.py
src/flowagent/roles/: __init__.py  api.py  base.py  bot.py  user.py
src/flowagent/ui/: app.py  checker.py  show_conversation.py  show_data.py
src/utils/: jinja_templates.py  wrappers.py
src/utils/templates/baselines/: flowbench.jinja
src/utils/templates/flowagent/: api_llm.jinja  bot_flowbench.jinja  bot_pdl.jinja  eval_session.jinja  eval_single_with_reference.jinja  user_llm.jinja  (+1 more)
test/flowagent/data/: test_pdl.py  test_workflow.py
test/flowagent/eval/: test_judge.py
