[project]
name = "FlowAgent"
version = "0.1.0"
description = "FlowAgent: Achieving Compliance and Flexibility for Workflow Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "typer>=0.15.4",
    "wandb==0.19.11",
    "python-dotenv==1.1.1",
]
